--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div> 
       <p>
         <a href="https://formfaca.de/sm/t5B7tbyRB"
-          >Auto Backup (beta)</a
+          >Auto Backup (Wishlist)</a
         >
       </p> 
       <div class="wrapper">
