--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="https://nostr-utils.pages.dev/img/broadcast.png"
+      href=""
       type="image/x-icon" />
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
