--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     <link
       rel="apple-touch-icon"
       href="https://nostr-utils.pages.dev/img/broadcast.png" />
+    
+    <meta property="og:title" content="How to optimize your website speed">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="https://example.com/images/website-speed.jpg">
+    <meta property="og:url" content="https://example.com/blog/how-to-optimize-your-website-speed">
   </head>
 
   <body>
