--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta property="og:type" content="article">
     <meta property="og:image" content="https://example.com/images/website-speed.jpg">
     <meta property="og:url" content="https://example.com/blog/how-to-optimize-your-website-speed">
+    <meta property="og:image:width" content="1200" />
   </head>
 
   <body>
