--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
       rel="apple-touch-icon"
       href="https://nostr-utils.pages.dev/img/broadcast.png" />
     
-    <meta property="og:title" content="How to optimize your website speed">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>How to Optimize Your Website Speed</title>
+    <meta property="og:title" content="How to Optimize Your Website Speed">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="https://example.com/images/website-speed.jpg">
+    <meta property="og:image" content="https://example.com/images/website-speed-large.jpg"> <!-- Replace with the URL of your larger image -->
     <meta property="og:url" content="https://example.com/blog/how-to-optimize-your-website-speed">
-    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:width" content="1600" /> 
   </head>
 
   <body>
