--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How to Optimize Your Website Speed</title>
-    <meta property="og:title" content="How to Optimize Your Website Speed">
+    <meta property="og:title" content="Take you Nostr today">
     <meta property="og:type" content="article">
-    <meta property="og:image" content="https://example.com/images/website-speed-large.jpg"> <!-- Replace with the URL of your larger image -->
-    <meta property="og:url" content="https://example.com/blog/how-to-optimize-your-website-speed">
+    <meta property="og:image" content="https://res.cloudinary.com/dfquzutga/image/upload/v1677187258/20230224_024801_0000_2_m7hazu.png"> <!-- Replace with the URL of your larger image -->
+    <meta property="og:url" content="https://nostryfied.online">
     <meta property="og:image:width" content="1600" /> 
   </head>
 
