--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
     <!-- Lightning -->
-    <meta name="lightning" content="bordalix@getalby.com" />
+    <meta name="lightning" content="realiefan@ln.tips" />
     <!-- PWA -->
     <meta name="theme-color" content="#ffffff" />
     <link
@@ -28,8 +28,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>How to Optimize Your Website Speed</title>
-    <meta property="og:title" content="Take you Nostr today">
-    <meta property="og:type" content="article">
+    <meta property="og:title" content="Take you Nostr Backups today with Nostryfied">
+    <meta property="og:type" content="Broadcast & Export, also Download a Copy of your Data today with just one click">
     <meta property="og:image" content="https://res.cloudinary.com/dfquzutga/image/upload/v1677187258/20230224_024801_0000_2_m7hazu.png"> <!-- Replace with the URL of your larger image -->
     <meta property="og:url" content="https://nostryfied.online">
     <meta property="og:image:width" content="1600" /> 
