--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- Primary Meta Tags -->
     <title>Nostryfied</title>
-    <meta name="title" content="Nostr broadcast" />
+    <meta name="title" content="Nostr Backup Service by Nostryfied" />
     <meta
       name="description"
       content="Fetch, backup and broadcast your Nostr events" />
