--- a/confirmation.html
+++ b/confirmation.html
@@ -46,7 +46,9 @@
   <body>
     <div class="container">
       <h1>Success!</h1>
-      <p>Your request has been received and is being processed.</p>
+      <p>Thank you for submitting your request. it may take up to one day to complete. Once finished,
+        we will notify you through your verified account and provide a link to your backup files folder. 
+        Thank you</p>
       <button onclick="redirectToHome()">Return to Home</button>
     </div>
 
