--- a/confirmation.html
+++ b/confirmation.html
@@ -47,8 +47,8 @@
     <div class="container">
       <h1>Success!</h1>
       <p>Thank you for submitting your request. it may take up to one day to complete. Once finished,
-        we will notify you through your verified account and provide a link to your backup files folder. 
-        Thank you</p>
+        we will notify you through our Nostryied nostr account and provide a link to your backup files folder. 
+        Thank you.</p>
       <button onclick="redirectToHome()">Return to Home</button>
     </div>
 
