--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       </p> 
       <div class="wrapper">
         <div class="divider div-transparent"></div> 
-          <h4><b>Why you should Use this backup Servive?</b></h1>
+          <h4><b>Why you should Use this backup Service?</b></h1>
         </div>
         <h2>
           Have you been using the new social network Nostr
