--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
               id="fetching-progress"
               name="fetching-progress"
               min="0"
-              max="20"
+              max="300"
               value="0"
               style="visibility: hidden" />
           </p>
@@ -125,7 +125,7 @@
               id="broadcasting-progress"
               name="broadcasting-progress"
               min="0"
-              max="20"
+              max="300"
               value="0"
               style="visibility: hidden" />
           </p>
@@ -191,7 +191,7 @@
     <script src="https://bundle.run/buffer@6.0.3"></script>
     <script src="https://bundle.run/bech32@2.0.0"></script>
     <script src="https://nostr-utils.pages.dev/js/jquery-3.6.2.min.js"></script>
-    <script src="https://nostr-utils.pages.dev/js/nostr-utils.js"></script>
+    <script src="js/nostr-utils.js"></script>
     <script src="js/relays.js"></script>
     <script src="js/nostr-broadcast.js"></script>
   </body>
