Adds an active relay information to the screen.

--- a/index.html
+++ b/index.html
@@ -108,10 +108,16 @@
               id="fetching-progress"
               name="fetching-progress"
               min="0"
-              max="300"
+              max="180"
               value="0"
               style="visibility: hidden" />
           </p>
+        </div>
+        <div class="box-content" id="checking-relays-header-box">
+          <p id="checking-relays-header"></p>
+        </div>
+        <div class="box-content" id="checking-relays-box">
+          <p id="checking-relays"></p>
         </div>
         <div class="box-content">
           <p id="file-download"></p>
@@ -125,7 +131,7 @@
               id="broadcasting-progress"
               name="broadcasting-progress"
               min="0"
-              max="300"
+              max="180"
               value="0"
               style="visibility: hidden" />
           </p>
