--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     
     <main class="container">
       <div class="header-space">
-        <h1>Welcome to Nostryfied</h1>
+        <h1>Nostryfied</h1>
       </div>
       <h2><b>Nostryfied</b> offers an <b>Broadcast & Export Service</b> that allows you to <b>Download a 
         Copy of your Data</b> & when you use this service, all of your data will also be <b>Broadcasted to Major Relays</b> 
