--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <!-- Favicon -->
     <link
       rel="shortcut icon"
-      https://res.cloudinary.com/dfquzutga/image/upload/v1677188210/Screenshot_20230224_030530_Canva_2_cwvo5m.jpg
       
       type="image/x-icon" />
     <!-- CSS -->
@@ -29,7 +28,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nostryfied</title>
-    
+    <meta property="og:title" content="Take you Nostr Backups today with Nostryfied">
+    <meta property="og:type" content="Broadcast & Export, also Download a Copy of your Data today with just one click">
+    <meta property="og:image" content="https://res.cloudinary.com/dfquzutga/image/upload/v1677187258/20230224_024801_0000_2_m7hazu.png"> <!-- Replace with the URL of your larger image -->
+    <meta property="og:url" content="https://nostryfied.online">
+    <meta property="og:image:width" content="1600" /> 
   </head>
 
   <body>
