--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </main>
    <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/sw.js')
+      navigator.serviceWorker.register('/js/sw.js')
         .then(function (registration) {
           console.log('Service Worker registered with scope:', registration.scope);
         })
